--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <img src="livingroom1.jpg" style="width:100%;margin-bottom:-6px">
       <div class="w3-display-bottomleft w3-container w3-black">
         <p>Living Room</p>
-        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">3D Tour</button></a>
+        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">360</button></a>
       </div>
     </div>
     <div class="w3-display-container mySlides">
     <img src="closet1.jpg" style="width:100%;margin-bottom:-6px">
       <div class="w3-display-bottomleft w3-container w3-black">
         <p>Closet</p>
-        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">3D Tour</button></a>
+        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">360</button></a>
       </div>
     </div>
     <div class="w3-display-container mySlides">
     <img src="bedroom1.jpg" style="width:100%;margin-bottom:-6px">
       <div class="w3-display-bottomleft w3-container w3-black">
         <p>Bedroom</p>
-        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">3D Tour</button></a>
+        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">360</button></a>
       </div>
     </div>
     <div class="w3-display-container mySlides">
     <img src="kitchen1.jpg" style="width:100%;margin-bottom:-6px">
       <div class="w3-display-bottomleft w3-container w3-black">
         <p>Kitchen</p>
-        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">3D Tour</button></a>
+        <a href="tours.html"><button style="height: 30px; width: 85px; margin:0 0 5px 0; font-family: 'Courier New', Courier, monospace;">360</button></a>
       </div>
     </div>
   </div>
